--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   	<junit.version>5.6.2</junit.version>
   	<hamcrest.version>2.2</hamcrest.version>
   	<selenium.version>3.141.59</selenium.version>
+  	<cucumber.version>6.1.2</cucumber.version>
   </properties>
   
   <dependencies>
@@ -33,6 +34,20 @@
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
 	    <version>${selenium.version}</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-java</artifactId>
+	    <version>${cucumber.version}</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-junit</artifactId>
+	    <version>${cucumber.version}</version>
+	    <scope>test</scope>
 	</dependency>
 	
 	
